<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">

    <ImageView
        android:id="@+id/ivDestino"
        android:layout_width="@dimen/imgDestino"
        android:layout_height="@dimen/imgDestino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@color/cardview_dark_background"
        android:contentDescription="@string/txtContentDescriptionIvDestino"
        />

    <TextView
        android:id="@+id/tvDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivDestino"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtTvDestino"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/btnEliminarDestino"
        android:layout_width="@dimen/imgEliminar"
        android:layout_height="@dimen/imgEliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_eliminar"
        android:scaleType="centerCrop"
        android:contentDescription="@string/txtContentDescriptionIbBtnEliminar"
        />

</androidx.constraintlayout.widget.ConstraintLayout>