<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.viajes.ViajeFormFragment"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivMisProximoViaje"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_proximosdestinos"
        android:scaleType="fitXY"
        android:contentDescription="@string/txtContentDescriptionIvMisViajes"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayoutTituloViaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMisProximoViaje"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hintTituloViaje"
        android:layout_marginTop="15dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiTituloViaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayoutTipoViaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiLayoutTituloViaje"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hintTipoViaje"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiTipoViaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayoutDescripcionViaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiLayoutTipoViaje"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hintDescripcionViaje"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiDescripcionViaje"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:maxLines="6"
            android:gravity="top|start"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiLayoutFechaViaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiLayoutDescripcionViaje"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hintFechaViaje"
        android:layout_marginTop="10dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiFechaViaje"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSeleccionDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiLayoutFechaViaje"
        android:text="@string/txtTvSeleccionDestino"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        />
    
    <Spinner
        android:id="@+id/spinnerDestinos"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSeleccionDestino"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        />
    
    <Button
        android:id="@+id/btnGuardarViaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerDestinos"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/txtBtnGuardarViaje"
        />

</androidx.constraintlayout.widget.ConstraintLayout>